--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "D:\\ProgramData\\Anaconda3\\envs\\py27\\python.exe"
+    "python.pythonPath": "C:\\Python27\\python.exe"
 }
